feat: expose upload token for frontend cd
